--- a/www/index.html
+++ b/www/index.html
@@ -6,13 +6,13 @@
     <title></title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <!--<link href="css/style.css" rel="stylesheet">-->
-      <link href='https://fonts.googleapis.com/css?family=RobotoDraft:400,500,700,400italic' rel='stylesheet' type='text/css'>
+    <link href="css/ionic.app.min.css" rel="stylesheet">
+
     <link href='https://fonts.googleapis.com/css?family=Righteous:200,300,400,500,600' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,500,600,700,800,900' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Fira+Sans:400,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link href="css/ionic.app.css" rel="stylesheet">
+
 
 
     <!-- ionic/angularjs js -->
