--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/ionic.app.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="lib/angular-barcode-generator/barcodeGenerator/barcode.css" type="text/css"/>
 
     <link href='https://fonts.googleapis.com/css?family=Righteous:200,300,400,500,600' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,500,600,700,800,900' rel='stylesheet' type='text/css'>
@@ -22,6 +23,7 @@
     <script src="cordova.js"></script>
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="lib/angular-img-fallback/angular.dcb-img-fallback.min.js"></script>
+    <script type="text/javascript" src="lib/angular-barcode-generator/barcodeGenerator/barcodeGenerator.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
