--- a/www/index.html
+++ b/www/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
+    <title>Perseus</title>
 
-    <link href="css/ionic.app.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/ionic.app.min.css" type="text/css"/>
     <link rel="stylesheet" href="css/barcode.css" type="text/css"/>
 
     <link href='https://fonts.googleapis.com/css?family=Righteous:200,300,400,500,600' rel='stylesheet' type='text/css'>
@@ -29,6 +29,7 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
     <script src="js/directives.js"></script>
+    <script src="js/constants.js"></script>
 
   </head>
   <body ng-app="product">
