gulpfile task para config, a funcionar

--- a/www/index.html
+++ b/www/index.html
@@ -29,7 +29,7 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
     <script src="js/directives.js"></script>
-    <script src="js/constants.js"></script>
+    <script src="js/constants/constants.js"></script>
 
   </head>
   <body ng-app="product">
